[gd_scene load_steps=4 format=3 uid="uid://dspgw7qsh4s4c"]

[ext_resource type="Script" path="res://scenes/entities/player/dummy/dummy.gd" id="1_5dbu5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5uji4"]
size = Vector3(0.5, 1.8, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_jxyyo"]
size = Vector3(1, 1.8, 1)

[node name="Dummy" type="CharacterBody3D" groups=["dummy", "enemies"]]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_5dbu5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("BoxShape3D_5uji4")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="CollisionShape3D"]
keep_y_velocity = false

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 25

[node name="Area" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("BoxShape3D_jxyyo")

[node name="HealthBar" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
visible = false
visibility_range_end = 10.0
visibility_range_end_margin = 5.0
visibility_range_fade_mode = 1
billboard = 1
font_size = 64

[node name="VisibilityTimer" type="Timer" parent="HealthBar"]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
